package Common

trait DataSet extends LinkedTree[DataSet]
